--- a/src/components/variables.scss
+++ b/src/components/variables.scss
@@ -2,9 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap');
 
 // Colors
-$color-primary: #5433ff;
-$color-primary-light: lighten($color-primary, 35%);
-$color-secondary: #20bdff;
+$color-primary: #5c7cfa;
+$color-primary-light: lighten($color-primary, 30%);
+$color-secondary: #845ef7;
 $color-grey-light: #fafbff;
 $color-grey-dark: #333;
 $gradient: linear-gradient(to right, $color-primary, $color-secondary);
@@ -31,8 +31,8 @@ $screen-desktop-medium: 1366px;
 $screen-desktop-large: 1681px;
 
 // Widths
-$navigation: 100rem;
-$page-width: 75rem;
+// $navigation: 100rem;
+$page-width: 100rem;
 
 // spacing
 $spacing-small: 2rem;
