--- a/src/components/hero.scss
+++ b/src/components/hero.scss
@@ -1,5 +1,6 @@
 .hero {
-  height: calc(100vh - $header-height - $footer-height - $spacing-xlarge);
+  height: calc(100vh - $header-height - $footer-height);
+  margin-top: $spacing-large;
   margin-bottom: $spacing-xlarge;
   display: flex;
   align-items: center;
@@ -7,15 +8,15 @@
   
   &__image {
     max-width: 25rem;
+    margin-left: $spacing-large;
     img {
       border-radius: 50%;
-      overflow: hidden;
       width: 100%;
     }
   }
   
   &__content {
-    margin-left: $spacing-large;
+    margin-left: $spacing-xlarge;
     justify-content: center;
   
     h1, h2 {
