--- a/src/components/hero.scss
+++ b/src/components/hero.scss
@@ -1,14 +1,10 @@
 .hero {
-  height: calc(100vh - $header-height - $footer-height);
-  margin-top: $spacing-large;
-  margin-bottom: $spacing-xlarge;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  margin-top: calc($spacing-xlarge * 2);
+  margin-bottom: calc($spacing-xlarge * 3);
+  @include mobile-flex;
   
   &__image {
     max-width: 25rem;
-    margin-left: $spacing-large;
     img {
       border-radius: 50%;
       width: 100%;
@@ -16,7 +12,6 @@
   }
   
   &__content {
-    margin-left: $spacing-xlarge;
     justify-content: center;
   
     h1, h2 {
