--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,5 @@
 @import "./variables.scss";
+@import "./mixins.scss";
 
 // Reset
 *,
@@ -85,6 +86,7 @@ hr {
   display: block;
   margin: 0 auto;
   max-width: $page-width;
+  padding: 0 $spacing-medium;
 
   &--nav {
     max-width: calc($page-width + 4rem);
