--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -31,9 +31,10 @@ $footer-height: 13rem;
 // spacing
 $spacing-small: 2rem;
 $spacing-medium: 3rem;
-$spacing-large: 6rem;
+$spacing-large: 5rem;
 $spacing-xlarge: 10rem;
 
 // Perspective
+$border-radius: 1rem;
 $box-shadow-card: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
 $border-radius-nav: 2rem;
