--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -36,5 +36,5 @@ $spacing-xlarge: 10rem;
 
 // Perspective
 $border-radius: 1rem;
-$box-shadow-card: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+$box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
 $border-radius-nav: 2rem;
