Add dark theme option

--- a/src/components/button.scss
+++ b/src/components/button.scss
@@ -1,9 +1,9 @@
 // @import 'variables.scss';
 
 .button {
-  border: .2rem solid $color-primary;
+  border: .2rem solid $color-black;
   border-radius: 2rem;
-  color: $color-primary;
+  color: $color-black;
   background-color: transparent;
   font-family: $font-family;
   font-size: $font-size-body;
