--- a/src/components/contactForm.scss
+++ b/src/components/contactForm.scss
@@ -18,12 +18,13 @@
   input, textarea {
     padding: 1rem 1.5rem;
     border-radius: $border-radius;
-    border: .1rem solid $color-primary;
+    border: .1rem solid $color-black;
     flex-grow: 1;
     margin-top: 1rem;
     margin-bottom: 2rem;
     font-family: $font-family;
     font-size: $font-size-body;
+    color: inherit;
   }
 }
 
@@ -31,7 +32,7 @@
   width: auto;
   height: auto;
   background: $color-accent;
-  background: linear-gradient(to right, $color-accent 50%, $color-background 50%);
+  background: linear-gradient(to right, $color-accent 50%, $color-white 50%);
   background-size: 205% 100%;
   background-position: right bottom;
   border-radius: $border-radius-nav;
@@ -50,7 +51,7 @@
 
 .c-button:hover {
   background-position: left bottom;
-  color: $color-background;
+  color: $color-white;
 }
 
 .c-button:focus {
