--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -4,74 +4,96 @@
   display: flex;
   flex-direction: column;
 
-  header {
-    height: $header-height;
+  .nav-link {
+    box-shadow: none;
+    color: $color-black;
+    padding: .5rem 2rem;
+    transition: all .2s ease;
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    font-weight: 600;
+    letter-spacing: .1rem;
 
-    nav {
-      padding: $spacing-medium 1rem;
-    }
-
-    a {
-      box-shadow: none;
-      color: $color-primary;
-      padding: .5rem 2rem;
-      border-radius: $border-radius-nav;
-      transition: all .2s ease;
-      &:hover {
-        background-color: $color-accent-light;
-      }
+    &--footer {
+      color: $color-white;
     }
   }
 
-  nav {
-    ul {
-      display: flex;
-      justify-content: right;
-      align-items: center;
-    
-      li {
-        margin-left: $spacing-medium;
-        &:first-child {
-          margin-right: auto;
-          margin-left: 0;
+  header, footer {
+    .container {
+      padding: $spacing-medium 1rem;
+    }
+  
+    nav {
+      ul {
+        display: flex;
+        justify-content: right;
+        align-items: center;
+      
+        li {
+          margin-left: $spacing-medium;
+          &:first-child {
+            margin-right: auto;
+            margin-left: 0;
+          }
         }
-      }
-    }  
+      }  
+    }
   }
 
   footer {
     margin-top: auto;
-    background-color: $color-primary;
-    color: $color-background;
+    background-color: $color-black;
+    color: $color-white;
 
-    .container {
-      padding: $spacing-medium 1rem;
-    }
-    
     nav {
       margin-bottom: $spacing-medium;
     }
-
-    a {
-      box-shadow: none;
-      text-transform: uppercase;
-      font-size: 1.4rem;
-      font-weight: 600;
-      letter-spacing: .1rem;
-      color: $color-background;
-      border-radius: $border-radius-nav;
-      padding: .5rem 2rem;
-      transition: all .2s ease;
-      outline: .2rem solid transparent;
-      &:hover {
-        outline: .2rem solid $color-accent;
-      }
-    } 
     
     .copyright {
       font-size: 1.5rem;
       padding-left: $spacing-small;
       padding-bottom: $spacing-small;
+    }
+  }
+
+  // Dark theme
+  &--dark {
+    color: $color-white;
+    background-color: $color-black;
+    .nav-link {
+      color: $color-white;
+    }
+
+    footer {
+      border-top: .1rem solid $color-gray;
+    }
+
+    *::selection {
+      background-color: $color-accent;
+    }
+
+    a,
+    a:active,
+    a:link,
+    a:visited {
+      &:not(.nav-link) {
+        box-shadow: inset 0 -0.075em $color-accent;
+        color: $color-accent-light;
+      }
+    }
+
+    a:hover {
+      &:not(.nav-link) {
+        box-shadow: inset 0 -1.375em 0 $color-accent;
+      }
+    }
+  }
+
+  .contact-form {
+    input, textarea {
+      background-color: $color-white-transparent;
+      border: .1rem solid $color-gray;
     }
   }
 }
