--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -23,18 +23,18 @@ html {
   }
 }
 
-// Content & general page styles
+// General styles & default light theme
 body {
   box-sizing: border-box;
-  color: $color-primary;
-  background-color: $color-background;
+  color: $color-black;
+  background-color: $color-white;
   font-family: $font-family;
   font-size: $font-size-body;
   line-height: $line-height-body;
   margin: 0;
   
   *::selection {
-    background-color: lighten($color-accent, 25%);
+    background-color: $color-accent-light;
   }
 }
 
