Add syntax highlighting for code blocks

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -88,3 +88,8 @@ hr {
   max-width: $page-width;
   padding: 0 $spacing-medium;
 }
+
+// code blocks
+.gatsby-highlight pre {
+  border-radius: $border-radius;
+}
