--- a/src/components/hero.scss
+++ b/src/components/hero.scss
@@ -40,4 +40,53 @@
       line-height: 1.2;
     }
   }
+
+  &__links {
+    display: flex;
+    align-items: center;
+    grid-gap: $spacing-small;
+    margin-top: $spacing-small;
+
+    a,
+    a:active,
+    a:link,
+    a:visited {
+      display: flex;
+      padding: .5rem 1rem;
+      border: .1rem solid $color-gray;
+      border-radius: $border-radius;
+      overflow: hidden;
+      max-width: auto;
+      color: $color-black;
+
+      span {
+        margin-left: 0;
+        opacity: 0;
+        transition: all .2s ease;
+        visibility: hidden;
+        width: 0;
+      }
+
+      &:hover {
+        max-width: 100%;
+
+        span {
+          margin-left: 1rem;
+          opacity: 1;
+          visibility: visible;
+          width: auto;
+        }
+      }
+    }
+  }
+}
+
+// Dark theme
+.layout--dark .hero__links {
+  a,
+  a:active,
+  a:link,
+  a:visited {
+    color: $color-white;
+  }
 }
