--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -5,7 +5,6 @@
   flex-direction: column;
 
   .nav-link {
-    box-shadow: none;
     color: $color-black;
     padding: .5rem 2rem;
     transition: all .2s ease;
@@ -77,14 +76,14 @@
     a:active,
     a:link,
     a:visited {
-      &:not(.nav-link) {
+      &:not(.nav-link, .styled-link) {
         box-shadow: inset 0 -0.075em $color-accent;
         color: $color-accent-light;
       }
     }
 
     a:hover {
-      &:not(.nav-link) {
+      &:not(.nav-link, .styled-link) {
         box-shadow: inset 0 -1.375em 0 $color-accent;
       }
     }
@@ -93,6 +92,11 @@
       input, textarea {
         background-color: $color-white-transparent;
       }
+    }
+
+    // icons
+    svg {
+      fill: $color-white;
     }
   }
 }
