Add icons to theme button

--- a/src/components/themeButton.scss
+++ b/src/components/themeButton.scss
@@ -1,7 +1,6 @@
 .theme-button {
   border-radius: 50%;
-  background: rgba(0, 0 ,0, .1);
-  box-shadow: $box-shadow;
+  background: $color-accent-light;
   cursor: pointer;
   border: none;
   width: 4rem;
