--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,9 +5,8 @@
 $color-black: #000;
 $color-white: #fff;
 $color-accent: #845ef7;
-$color-accent-light: #e5dbff;
-$color-accent-dark: #5f3dc4;
-$color-gray: #868e96;
+$color-accent-light: #f3f0ff;
+$color-gray: #adb5bd;
 $color-white-transparent: rgba(255, 255, 255, .15);
 
 // Typography
