--- a/src/components/button.scss
+++ b/src/components/button.scss
@@ -1,21 +1,18 @@
-// @import 'variables.scss';
-
 .button {
-  border: .2rem solid $color-black;
-  border-radius: 2rem;
-  color: $color-black;
-  background-color: transparent;
+  border: none;
+  border-radius: $border-radius;
+  color: $color-white;
+  background-color: $color-accent;
   font-family: $font-family;
-  font-size: $font-size-body;
+  font-size: 1.4;
+  text-transform: uppercase;
+  font-weight: 600;
   margin: 0 auto;
-  padding: 1rem 2.5rem;
+  padding: 1rem 2rem;
   width: fit-content;
   transition: all 0.2s;
+  letter-spacing: .1rem;
   cursor: pointer;
-
-  &:hover {
-    // background: $gradient-dark;
-  }
 
   &:disabled {
     cursor: not-allowed;
