--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -6,15 +6,33 @@
 
   .nav-link {
     color: $color-black;
-    padding: .5rem 2rem;
     transition: all .2s ease;
     text-transform: uppercase;
     font-size: 1.4rem;
     font-weight: 600;
     letter-spacing: .1rem;
+    position: relative;
+
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: -.5rem;
+      left: 0;
+      background-color: $color-black;
+      height: .2rem;
+      width: 0;
+      transition: all .2s ease;
+    }
+
+    &:hover::after {
+      width: 100%;
+    }
 
     &--footer {
       color: $color-white;
+      &::after {
+        background-color: $color-white;
+      }
     }
   }
 
@@ -28,9 +46,9 @@
         display: flex;
         justify-content: right;
         align-items: center;
+        grid-gap: $spacing-large;
       
         li {
-          margin-left: $spacing-medium;
           &:first-child {
             margin-right: auto;
             margin-left: 0;
@@ -60,8 +78,12 @@
   &--dark {
     color: $color-white;
     background-color: $color-black;
+
     .nav-link {
       color: $color-white;
+      &::after {
+        background-color: $color-white;
+      }
     }
 
     footer {
