--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -86,6 +86,11 @@
     .copyright {
       font-size: 1.5rem;
       padding-bottom: $spacing-small;
+      text-align: center;
+
+      @media screen and (min-width: $screen-tablet-portrait) {
+        text-align: left;
+      }
     }
   }
 
