Refactor theme with better color contrast

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,10 +1,11 @@
 // Colors
 $color-black: #000;
 $color-white: #fff;
-$color-accent: #845ef7;
-$color-accent-light: #f3f0ff;
-$color-gray: #adb5bd;
 $color-white-transparent: rgba(255, 255, 255, .15);
+$color-gray-1: #f1f3f5;
+$color-gray-5: #adb5bd;
+$color-violet-3: #b197fc;
+$color-violet-9: #5f3dc4;
 
 // Typography
 $font-family: 'Open Sans', sans-serif;
