--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -5,7 +5,6 @@
   flex-direction: column;
 
   .nav-link {
-    color: $color-black;
     transition: all .2s ease;
     text-transform: uppercase;
     font-size: 1.4rem;
@@ -18,7 +17,6 @@
       position: absolute;
       bottom: -.5rem;
       left: 0;
-      background-color: $color-black;
       height: .2rem;
       width: 0;
       transition: all .2s ease;
@@ -88,57 +86,16 @@
       padding-bottom: $spacing-small;
       text-align: center;
 
+      a,
+      a:active,
+      a:link,
+      a:visited {
+        color: $color-violet-3;
+      }
+
       @media screen and (min-width: $screen-tablet-portrait) {
         text-align: left;
       }
-    }
-  }
-
-  // Dark theme
-  &--dark {
-    color: $color-white;
-    background-color: $color-black;
-
-    .nav-link {
-      color: $color-white;
-      &::after {
-        background-color: $color-white;
-      }
-    }
-
-    footer {
-      border-top: .1rem solid $color-gray;
-    }
-
-    *::selection {
-      background-color: $color-accent;
-    }
-
-    a,
-    a:active,
-    a:link,
-    a:visited {
-      &:not(.nav-link, .styled-link) {
-        box-shadow: inset 0 -0.075em $color-accent;
-        color: $color-accent-light;
-      }
-    }
-
-    a:hover {
-      &:not(.nav-link, .styled-link) {
-        box-shadow: inset 0 -1.375em 0 $color-accent;
-      }
-    }
-
-    .contact-form {
-      input, textarea {
-        background-color: $color-white-transparent;
-      }
-    }
-
-    // icons
-    svg {
-      fill: $color-white;
     }
   }
 }
