--- a/src/components/skills.scss
+++ b/src/components/skills.scss
@@ -3,11 +3,10 @@
   flex-wrap: wrap;
   grid-gap: $spacing-small;
 
-  li {
+  &__chip {
     display: flex;
     align-items: center;
     padding: .25rem 1rem;
-    background-color: $color-accent-light;
     border-radius: $border-radius;
     flex: 0 0 auto;
     
@@ -15,8 +14,4 @@
       margin-left: 1rem;
     }
   }
-}
-
-.layout--dark .skills li {
-  background-color: $color-white-transparent;
 }
