--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,5 @@
 @import "./variables.scss";
+@import "./themes.scss";
 @import "./mixins.scss";
 
 // Reset
@@ -23,48 +24,19 @@ html {
   }
 }
 
-// General styles & default light theme
+// General styles
 body {
   box-sizing: border-box;
-  color: $color-black;
-  background-color: $color-white;
   font-family: $font-family;
   font-size: $font-size-body;
   line-height: $line-height-body;
   margin: 0;
-  
-  *::selection {
-    background-color: $color-accent-light;
-  }
-}
-
-*:focus {
-  outline-color: lighten($color-accent, 20%);
 }
 
 h1,
 h2,
 h3 {
   margin-bottom: 1rem;
-}
-
-a,
-a:active,
-a:link,
-a:visited {
-  text-decoration: none;
-  box-shadow: inset 0 -0.075em $color-accent-light;
-  color: $color-accent;
-  position: relative;
-  transition: color 0.2s;
-  z-index: 0;
-  transition: all 0.2s;
-  cursor: pointer;
-}
-
-a:hover {
-  box-shadow: inset 0 -1.375em 0 $color-accent-light;
-  cursor: pointer;
 }
 
 p {
@@ -78,7 +50,7 @@ ul {
 }
 
 hr {
-  border: 0.05rem solid lighten($color-accent, 50%);
+  border: 0.05rem solid $color-gray-5;
   margin: $paragraph-spacing auto;
 }
 
@@ -93,17 +65,10 @@ hr {
 .styled-link:active,
 .styled-link:link,
 .styled-link:visited  {
-  box-shadow: none;
+  text-decoration: none;
   &:hover {
-    box-shadow: none;
+    text-decoration: none;
   }
-}
-
-// icons
-svg {
-  fill: $color-black;
-  width: $font-size-body;
-  height: auto;
 }
 
 // code blocks
