--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,8 +4,12 @@ $color-white: #fff;
 $color-white-transparent: rgba(255, 255, 255, .15);
 $color-gray-1: #f1f3f5;
 $color-gray-5: #adb5bd;
+$color-violet-1: #e5dbff;
 $color-violet-3: #b197fc;
+$color-violet-4: #9775fa;
 $color-violet-9: #5f3dc4;
+$color-grape-3: #e599f7;
+$color-grape-9: #862e9c;
 
 // Typography
 $font-family: 'Open Sans', sans-serif;
