--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,6 +2,31 @@
 @import "./themes.scss";
 @import "./mixins.scss";
 
+// custom fonts
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(/fonts/open-sans-400-normal.woff2) format('woff2');
+}
+
+@font-face {
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(/fonts/ubuntu-700-normal.woff2) format('woff2');
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url(/fonts/open-sans-600-normal.woff2) format('woff2');
+}
+
 // Reset
 *,
 *::before,
@@ -37,6 +62,7 @@ h1,
 h2,
 h3 {
   margin-bottom: 1rem;
+  font-family: $font-family-accent;
 }
 
 p {
