Add a modal for demo videos

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -91,6 +91,7 @@ hr {
 .styled-link:active,
 .styled-link:link,
 .styled-link:visited  {
+  cursor: pointer;
   text-decoration: none;
   &:hover {
     text-decoration: none;
