--- a/src/components/projects.scss
+++ b/src/components/projects.scss
@@ -52,7 +52,7 @@
     align-items: center;
     li {
       margin-right: 1rem;
-      a {
+      a, button {
         transition: all .2s ease;
         color: inherit;
         display: flex;
@@ -61,6 +61,14 @@
         svg {
           transition: all .2s ease;
         }
+      }
+
+      button {
+        font-size: $font-size-body;
+        line-height: $line-height-body;
+        border: none;
+        background: none;
+        cursor: pointer;
       }
     }
   }
