--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -31,6 +31,13 @@
     height: auto;
   }
 
+  .modal {
+    background-color: rgba(0, 0, 0, .5);
+    &__container {
+      background-color: $color-white;
+    }
+  }
+
   .nav-link {
     color: $color-black;
     &::after {
@@ -75,7 +82,8 @@
     background-color: $color-gray-1;
   }
 
-  .project__links a:hover {
+  .project__links a:hover,
+  .project__links button:hover {
     color: $color-violet-9;
     svg {
       fill: $color-violet-9;
@@ -136,6 +144,13 @@
     border-top: .1rem solid $color-gray-5;
   }
 
+  .modal {
+    background-color: rgba(255, 255, 255, .5);
+    &__container {
+      background-color: $color-black;
+    }
+  }
+
   .nav-link {
     color: $color-white;
     &::after {
@@ -169,7 +184,8 @@
     background-color: $color-white-transparent;
   }
 
-  .project__links a:hover {
+  .project__links a:hover,
+  .project__links button:hover {
     color: $color-violet-3;
     svg {
       fill: $color-violet-3;
