Make modal responsive

--- a/src/components/hero.scss
+++ b/src/components/hero.scss
@@ -8,8 +8,8 @@
   }
   
   &__image {
-    width: 250px;
-    height: 250px;
+    width: 25rem;
+    height: 25rem;
     flex-shrink: 0;
     box-shadow: $box-shadow;
     border-radius: 50%;
