--- a/src/components/video.scss
+++ b/src/components/video.scss
@@ -2,4 +2,11 @@
   border-radius: $border-radius;
   overflow: hidden;
   box-shadow: $box-shadow;
+  width: 55rem;
+  height: 30rem;
+
+  @media screen and (min-width: $screen-tablet-portrait){
+    width: 70rem;
+    height: 40rem;
+  }
 }
