--- a/src/components/modal.scss
+++ b/src/components/modal.scss
@@ -14,6 +14,8 @@
     box-shadow: $box-shadow;
     max-width: $page-width;
     padding: $spacing-medium;
+    display: flex;
+    flex-direction: column;
   }
 
   &__header {
