--- a/src/components/video.scss
+++ b/src/components/video.scss
@@ -1,17 +1,20 @@
 .video {  
-  border-radius: $border-radius;
-  overflow: hidden;
   box-shadow: $box-shadow;
   width: 30rem;
-  height: 18rem;
+  height: 15rem;
+
+  @media screen and (min-width: $screen-mobile-portrait) {
+    width: 40rem;
+    height: 20rem;
+  }
 
   @media screen and (min-width: $screen-mobile-landscape) {
     width: 55rem;
-    height: 30rem;
+    height: 28rem;
   }
 
-  @media screen and (min-width: $screen-desktop) {
-    width: 70rem;
-    height: 40rem;
+  @media screen and (min-width: $screen-tablet-landscape) {
+    width: 85rem;
+    height: 45rem;
   }
 }
